--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,7 +15,7 @@
 /node_modules
 /public/build
 /public/hot
-/public/images/
+/public/images/*.jpg
 /public/storage
 /storage/*.key
 /storage/pail
@@ -23,5 +23,5 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
-*.jpg
+
 
